Fixes #117 overflow: auto added to <pre> in css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,6 +129,7 @@ pre, code {
 pre {
 	border: 3px solid #CCC;
 	margin: 0 0 1.5em 0;
+	overflow: auto;
 }
 pre.cli {
     background-color: #121212;
